namespace TLT.Bike.Bike
{
  public static class BikeAnimations
  {
    public const string IS_MOVE = "IsMove";

    public const string IS_HURT = "IsHurt";

    public const string IS_FLIP = "IsFlip";

    public const string IS_START = "IsStart";

    public const string IS_MOTO_BALANCE = "IsMotoBalance";

    public const string IS_TURN_UP = "IsTurnUp";

    public const string IS_TURN_DOWN = "IsTurnDown";

    public const string IS_DASH = "IsDash";
  }
}